added login and signout

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -25,13 +25,13 @@ body {
   }
   
   p {
-    color: #bf1650;
+    text-align: center;
   }
   
-  p::before {
+  /* p::before {
     display: inline;
     content: "⚠ ";
-  }
+  } */
   
   input {
     display: block;
